<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>net.krows_team</groupId>
  <artifactId>sticker-bot</artifactId>
  <version>0.1.1</version>
  <name>Telegram Sticker Bot</name>
  <properties>
	<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	<java.version>17</java.version>
	<junit.jupiter.version>5.8.2</junit.jupiter.version>
	</properties>
  <dependencies>
  	<dependency>
        <groupId>org.junit.jupiter</groupId>
        <artifactId>junit-jupiter</artifactId>
        <version>${junit.jupiter.version}</version>
        <scope>test</scope>
    </dependency>
    <dependency>
	    <groupId>org.junit.jupiter</groupId>
	    <artifactId>junit-jupiter-params</artifactId>
	    <version>${junit.jupiter.version}</version>
	    <scope>test</scope>
	</dependency>
  	<dependency>
	  <groupId>com.github.pengrad</groupId>
	  <artifactId>java-telegram-bot-api</artifactId>
	  <version>6.0.1</version>
	</dependency>
  	 <dependency>
	  <groupId>com.vdurmont</groupId>
	  <artifactId>emoji-java</artifactId>
	  <version>5.1.1</version>
	</dependency>
	<dependency>
	    <groupId>org.slf4j</groupId>
	    <artifactId>slf4j-simple</artifactId>
	    <version>1.7.36</version>
	</dependency>
	<dependency>
		<groupId>org.projectlombok</groupId>
		<artifactId>lombok</artifactId>
		<version>1.18.24</version>
		<scope>provided</scope>
	</dependency>
	<dependency>
	    <groupId>org.commonmark</groupId>
	    <artifactId>commonmark</artifactId>
	    <version>0.20.0</version>
	</dependency>
  </dependencies>
  <build>
  	<plugins>
  		<plugin>
  			<groupId>org.apache.maven.plugins</groupId>
  			<artifactId>maven-surefire-plugin</artifactId>
  			<version>2.22.2</version>
  		</plugin>
  		<plugin>
		    <groupId>org.apache.maven.plugins</groupId>
		    <artifactId>maven-compiler-plugin</artifactId>
		    <version>3.8.0</version>
		    <configuration>
	       		<source>${java.version}</source>
		        <target>${java.version}</target>
		    </configuration>
		</plugin>
		<plugin>
		    <groupId>org.apache.maven.plugins</groupId>
		    <artifactId>maven-dependency-plugin</artifactId>
		    <version>3.0.1</version>
		    <executions>
		        <execution>
		            <id>copy-dependencies</id>
		            <phase>package</phase>
		            <goals><goal>copy-dependencies</goal></goals>
		        </execution>
		    </executions>
		</plugin>
		<plugin>
			<groupId>org.codehaus.mojo</groupId>
			<artifactId>exec-maven-plugin</artifactId>
			<version>1.2.1</version>
			<configuration>
				<executable>java</executable>
				<arguments>
					<argument>-Dfile.encoding=UTF-8</argument>
					<argument>--add-opens=java.base/java.lang.reflect=ALL-UNNAMED</argument>
					<argument>-Dorg.slf4j.simpleLogger.defaultLogLevel=DEBUG</argument>
					<argument>-classpath</argument>
					<classpath/>
					<argument>net.krows_team.sticker_bot.StickerBot</argument>
				</arguments>
			</configuration>
		</plugin>
  	</plugins>
  </build>
</project>